fix horizontal scroll behavior

--- a/assets/sass/mixin.sass
+++ b/assets/sass/mixin.sass
@@ -109,7 +109,7 @@ $VIEW_PADDING_SP: 20px
 @mixin facet
   width: 280px
   min-width: 280px
-  margin-right: 34px
+  margin-right: 10px
   margin-top: 31px
   border-radius: 7px
   padding: 0 18px
